force-app/main/default/objects/Product_Pricing_Rule__mdt/Product_Pricing_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Used in PostTSAEmail2.page</description>
    <label>Product Pricing Rule</label>
    <pluralLabel>Product Pricing Rules</pluralLabel>
</CustomObject>