force-app/main/default/objects/Product_Pricing_Rule__mdt/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>