force-app/main/default/objects/Product_Pricing_Rule__mdt/fields/Flat_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>Flat_Price_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the only price used when the conditions of the rule apply</description>
    <label>Flat Price Override</label>
    <type>Checkbox</type>
</CustomField>