force-app/main/default/objects/Product_Pricing_Rule__mdt/fields/Guided_Selling_Field__c.field-meta.xml
<CustomField>
    <fullName>Guided_Selling_Field__c</fullName>
    <label>Guided Selling Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>