force-app/main/default/objects/Product_Pricing_Rule__mdt/fields/Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment__c</fullName>
    <label>Price Adjustment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>