force-app/main/default/objects/Product_Pricing_Rule__mdt/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Matches the Calculator Location field on the Product OR the Product Name if the Calculator Location is a la carte</description>
    <inlineHelpText>Calculator Location field on the Product OR the Product Name</inlineHelpText>
    <label>Product Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Personal Return</fullName>
            </value>
            <value>
                <fullName>Business Return</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>LLC State Filing</fullName>
            </value>
            <value>
                <fullName>Corp State Filing</fullName>
            </value>
            <value>
                <fullName>Two-Year Review</fullName>
            </value>
            <value>
                <fullName>EIN - Standard Processing</fullName>
            </value>
            <value>
                <fullName>Operating Agreement</fullName>
            </value>
            <value>
                <fullName>Foreign State</fullName>
            </value>
            <value>
                <fullName>Back Bookkeping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>