force-app/main/default/objects/Product_Pricing_Rule__mdt/fields/Quote_Field2__c.field-meta.xml
<CustomField>
    <fullName>Quote_Field2__c</fullName>
    <inlineHelpText>API Name Only</inlineHelpText>
    <label>Quote Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calc_Number_of_Transactions__c</fullName>
            </value>
            <value>
                <fullName>Calc_Number_of_Rental_Properties__c</fullName>
            </value>
            <value>
                <fullName>Calc_Personal_Income__c</fullName>
            </value>
            <value>
                <fullName>Calc_Living_Abroad__c</fullName>
            </value>
            <value>
                <fullName>Calc_Number_of_K1s__c</fullName>
            </value>
            <value>
                <fullName>Calc_Entity_Type__c</fullName>
            </value>
            <value>
                <fullName>Calc_Foreign_Owners__c</fullName>
            </value>
            <value>
                <fullName>Calc_Industry_Type__c</fullName>
            </value>
            <value>
                <fullName>Calc_Number_of_Contractors__c</fullName>
            </value>
            <value>
                <fullName>Calc_Number_of_Employees__c</fullName>
            </value>
            <value>
                <fullName>Calc_Projected_1st_Year_Revenue__c</fullName>
            </value>
            <value>
                <fullName>Calc_Projected_1st_Year_Profit__c</fullName>
            </value>
            <value>
                <fullName>Calc_State_of_Incorporation__c</fullName>
            </value>
            <value>
                <fullName>Calc_Total_Investor_Funding__c</fullName>
            </value>
            <value>
                <fullName>Calc_Total_Startup_Cost__c</fullName>
            </value>
            <value>
                <fullName>Calc_Website_Selling_Goods__c</fullName>
            </value>
            <value>
                <fullName>Calc_Number_of_Owners__c</fullName>
            </value>
            <value>
                <fullName>Calc_Foreign_State__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>