force-app/main/default/objects/Product_Pricing_Rule__mdt/fields/User_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Field__c</fullName>
    <description>***Important***
When adding a new value, the query in PostTSAEmail2ExtensionController needs to be adjusted to match</description>
    <inlineHelpText>API Name Only</inlineHelpText>
    <label>User Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skills_Sales__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>